--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="style.css">
- <link rel="stylesheet" href="snake-style.css">
  <title>Snake</title>
 
 </head>
@@ -58,7 +57,7 @@
                 <span class="score-count" id="score">0</span>
             </div>
         </div> 
-        <div class="canvas-wrapper">
+        <div class="canvas-wrapper" id="map-disp">
             <canvas id="game-canvas"></canvas>
         </div>
     </div>
@@ -67,7 +66,6 @@
       </div>
     </div>
 
- <script src="client.js"></script>
- <script src="snake-script.js"></script>
+ <script src="ws-client.js"></script>
 </body>
 </html>
